# seedwing-policy

./: .devcontainer.json  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  README.adoc  README.md  RELEASE.md  rust-toolchain.toml
cli/: Cargo.toml  README.md
cli/docs/modules/ROOT/: nav.adoc
cli/src/: cli.rs  error.rs  main.rs  verify.rs
cli/src/command/: bench.rs  eval.rs  mod.rs  serve.rs  test.rs  verify.rs
cli/src/util/: eval.rs  explain.rs  mod.rs
engine/: .gitignore  Cargo.toml  Makefile
engine/.cargo/: config.toml
engine/benches/: engine.rs
engine/src/: client.rs  error_printer.rs  lib.rs  test.rs  wit.rs
engine/src/api/: info.rs  mod.rs
engine/src/core/: mod.rs
engine/src/core/base64/: base64-url.adoc  base64.adoc  mod.rs
engine/src/core/config/: mod.rs  of.rs
engine/src/core/csaf/: mod.rs  v2_0.dog
engine/src/core/cyclonedx/: hash.dog  mod.rs
engine/src/core/data/: from.rs  lookup.adoc  lookup.rs  mod.rs
engine/src/core/debug/: delay.rs  mod.rs
engine/src/core/guac/: certify-vulnerability.adoc  certify_vuln.rs  mod.rs
engine/src/core/intoto/: envelope.dog  envelope.rs  mod.rs  verify-envelope.adoc  verify-envelope.html
engine/src/core/iso/: mod.rs
engine/src/core/jsf/: public_key.dog
engine/src/core/json/: JSON.adoc  mod.rs
engine/src/core/kafka/: opa.dog
engine/src/core/lang/: and.rs  chain.rs  map-or-null.adoc  map.adoc  map.rs  mod.rs  not.rs  or.rs  refine.rs  traverse.adoc  (+1 more)
engine/src/data/: mod.rs
engine/src/info/: mod.rs
engine/src/lang/: builder.rs  meta.rs  mod.rs
engine/src/package/: mod.rs
engine/src/runtime/: cache.rs  config.rs  metadata.rs  mod.rs  rationale.rs  response.rs  sources.rs  trace.rs  utils.rs
engine/src/value/: json.rs  mod.rs  serde.rs  yaml.rs
engine/static-component/: .gitignore  Makefile  policy-cat.dog  policy-dog.dog
engine/static-component/static-evaluator/: Cargo.toml
engine/static-component/wasm-generator/: Cargo.toml
engine/static-component/wasm-runtime/: Cargo.toml
engine/test-data/intoto/: example-intoto-envelope.json  tekton-chains-envelope.json  tekton-example-invalid.blob  tekton-example.blob
engine/test-data/slsa/: example1.json  example2.json
engine/test-data/spdx/: v2_2_statement.json  v2_3_predicate.json
engine/tests/: common.rs  explain.rs  explain1.rs  levels.rs  parse.rs  proxy.dog  proxy.rs  response.rs
engine/tests/parse-data/: and.dog  attributes1.dog
engine/tests/response-data/: proxy-jdom.json
engine/wit/: engine-types.wit  engine-world.wit
engine/wit-examples/javascript/: README.md  package-lock.json  package.json  tsconfig.json
engine/wit-examples/python/: .gitignore  Makefile  README.md  engine.py
engine/wit-examples/rust/: Cargo.toml
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
frontend/assets/: style.scss
frontend/src/: about.rs  app.rs  console.rs  main.rs
frontend/src/common/: eval.rs  mod.rs
frontend/src/pages/: index.rs  mod.rs
frontend/src/utils/: mod.rs
frontend/textmate/: dogma.tmLanguage.json
seedwing-policy-cli/: Cargo.toml  README.md
seedwing-policy-cli/src/: cli.rs  config.rs  eval.rs  explain.rs  main.rs  verify.rs
seedwing-policy-engine/: Cargo.toml
seedwing-policy-engine/benches/: engine.rs
seedwing-policy-engine/docs/: dogma.adoc
seedwing-policy-engine/src/: error_printer.rs  lib.rs
seedwing-policy-engine/src/api/: info.rs
seedwing-policy-engine/src/core/: mod.rs
seedwing-policy-engine/src/data/: mod.rs
seedwing-policy-engine/src/function/: base64.rs  mod.rs  sigstore.rs
seedwing-policy-engine/src/lang/: builder.rs  expr.rs  literal.rs  mod.rs  package.rs  ty.rs
seedwing-policy-engine/src/package/: mod.rs
seedwing-policy-engine/src/runtime/: cache.rs  mod.rs  monitor.rs  rationale.rs  response.rs  sources.rs  statistics.rs
seedwing-policy-engine/src/value/: json.rs  mod.rs  serde.rs  yaml.rs
seedwing-policy-engine/tests/parse-data/: contains_self.dog
seedwing-policy-frontend/: Cargo.toml  README.md  Trunk.toml  index.html
seedwing-policy-frontend/assets/: asciidoctor.scss  rationale.scss  style.scss
seedwing-policy-frontend/assets/sw/: inner.scss
seedwing-policy-frontend/seedwing-policy-frontend-asciidoctor/: Cargo.toml
seedwing-policy-frontend/seedwing-policy-frontend-asciidoctor/src/: lib.rs  sys.rs
seedwing-policy-frontend/src/: console.rs  editor.rs  main.rs  utils.rs
seedwing-policy-frontend/src/pages/: documentation.rs  index.rs  mod.rs  repository.rs
seedwing-policy-frontend/textmate/: dogma.tmLanguage.json
seedwing-policy-server/: Cargo.toml  build.rs
seedwing-policy-server/data/: people.json
seedwing-policy-server/docs/: antora.yml
seedwing-policy-server/embedded-frontend/: Cargo.toml  build.rs
seedwing-policy-server/policy/: root.dog
seedwing-policy-server/policy/foo/: bar.dog
seedwing-policy-server/policy/mycorp/: policies.dog
seedwing-policy-server/src/: api.rs  cli.rs  main.rs  monitor.rs  playground.rs  policy.rs  statistics.rs
seedwing-policy-server/src/api/: mod.rs
seedwing-policy-server/src/assets/: style.css
seedwing-policy-server/src/stream/: mod.rs
seedwing-policy-server/src/ui/: _documentation.html  _examples.html  _index.html  _layout.html  _module.html  _monitor.html  _playground.html  _statistics.html  _type.html  adoc.css  breadcrumbs.rs  html.rs  json.rs  mod.rs  rationale.rs  response.rs
seedwing-policy-server/web/: copy-assets.sh  package-lock.json  package.json
seedwing-policy-wasm/: Cargo.toml
seedwing-policy-wasm/src/: lib.rs
server/: Cargo.toml  build.rs
server/embedded-frontend/: Cargo.toml  build.rs
server/embedded-frontend/src/: lib.rs
server/embedded-swaggerui/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
server/embedded-swaggerui/src/: lib.rs
server/policy/mycorp/: policies.dog
server/src/: lib.rs  main.rs  monitor.rs  playground.rs  policy.rs
server/src/api/: format.rs  mod.rs  openapi.rs
server/src/ui/: _index.html  _playground.html  _type.html  format.rs  mod.rs  rationale.rs
(+443 files in other folders)
