[workspace]
members = [
    "engine",
    "server",
    "swio",
]
exclude = [
  # We need to exclude the frontend, as it uses different cargo build settings
  # which can only be applied on the root/workspace level, but conflict with other crates
  # in this project.
    "frontend"
]

[workspace.dependencies]
serde_view = { git = "https://github.com/ctron/serde-view.git", rev = "05aad15bcf14ee0023fe493f32fa8b36f16323f3" }

[profile.bench]
debug = true

[profile.release]
lto = true
codegen-units = 1
