[workspace]
members = [
    "engine",
    "server",
    "swio",
]
exclude = [
  # We need to exclude the frontend, as it uses different cargo build settings
  # which can only be applied on the root/workspace level, but conflict with other crates
  # in this project.
    "frontend"
]

[workspace.dependencies]
serde_view = "0.1.6"

[profile.bench]
debug = true

[profile.release]
lto = true
codegen-units = 1
