[package]
name = "seedwing-policy-cli"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/seedwing-policy"

description = "A CLI to evaluate and explore seedwing policies"
categories = ["development-tools", "parser-implementations"]
keywords = ["policy"]

[dependencies]
seedwing-policy-engine = { path = "../engine" }
seedwing-policy-server = { path = "../server" }
log = "0.4.17"
is-terminal = "0.4.3"
termcolor = "1.2.0"
env_logger = "0.10.0"
futures-util = "0.3.25"
serde_json = "1.0.89"
serde_yaml = "0.9.17"
clap = { version = "4.0.29", features = [ "derive"] }
serde = { version = "1.0.152" }
hdrhistogram = "7.5.2"
tokio = "*"
actix-rt = "*"
walkdir = "2.3.2"

[features]
default = [ "frontend"]
debug = [
    "seedwing-policy-engine/debug",
    "seedwing-policy-server/debug",
]
frontend = ["seedwing-policy-server/frontend"]

[[bin]]
name = "swio"
path = "src/main.rs"