[package]
name = "seedwing-policy-engine"
version = "0.1.0-alpha.23"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/seedwing-policy"

description = "A functional type system for implementing policy inspection, audit and enforcement"
categories = ["development-tools", "parser-implementations"]
keywords = ["policy"]
readme = "../README.md"

[dependencies]
chumsky = "0.8.0"
ariadne = "0.1.5"
walkdir = "2.3.2"
serde = { version = "1.0.152", features = [ "rc", "derive"] }
serde_json = { version = "1.0.89", features = [ "float_roundtrip", "arbitrary_precision"] }
serde_yaml = "0.9.17"
toml = "0.7.2"
log = "0.4.17"
futures-util = "0.3.25"
thiserror = "1"
url = "2"
indexmap = { version = "1.9.2", features = ["serde"] }
anyhow = "1"
tokio = "*"
rand = "0.8.5"
num-integer = "0.1.45"

# functions
sigstore = { version = "0.6.0", optional = true }
x509-parser = "0.14.0"
base64 = "0.21.0"
regex = "1.7.1"
cidr = "0.2.1"
http = "0.2.8"
iref = "2.2.3"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = { version = "1.3.0", features = ["v4"] }
openvex = "0.1.0"
spdx = "0.10.0"
csaf = { version = "0.4.0", git = "https://github.com/lulf/csaf-rs.git", rev = "10be54eca5fde155c639938fb3d7b54ed8854820"}

# monitoring
prometheus = { version = "0.13.3", optional = true }

[features]
default = ["sigstore", "monitor"]
sigstore = ["dep:sigstore"]
monitor = ["prometheus"]
debug = []

[dev-dependencies]
criterion = "0.4"
tokio = { version = "1.24", features = ["rt"] }
actix-rt = "2.7.0"

[[bench]]
name = "engine"
harness = false
