[package]
name = "seedwing-policy-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/seedwing-policy"

description = "A functional type system for implementing policy inspection, audit and enforcement"
categories = ["development-tools", "parser-implementations"]
keywords = ["policy"]
readme = "../README.md"

[dependencies]
chumsky = "0.9.2"
ariadne = "0.2.0"
walkdir = "2.3.2"
serde = { version = "1.0.152", features = [ "rc", "derive"] }
serde_json = { version = "1.0.89", features = [ "float_roundtrip", "arbitrary_precision"] }
serde_yaml = "0.9.17"
toml = "0.7.2"
log = "0.4.17"
futures-util = "0.3.25"
thiserror = "1"
url = "2"
indexmap = { version = "1.9.2", features = ["serde"] }
schemars = "0.8.12"
anyhow = "1"
tokio = "*"
rand = "0.8.5"
num-integer = "0.1.45"
sha2 = "0.10.6"

# functions
#sigstore = { version = "0.6.0", optional = true }
sigstore = { optional = true, git = "https://github.com/danbev/sigstore-rs.git", branch = "verify-blob"  }
x509-parser = "0.14.0"
base64 = "0.21.0"
regex = "1.7.1"
cidr = "0.2.1"
http = "0.2.8"
iref = "2.2.3"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = { version = "1.3.0", features = ["v4"] }
openvex = "0.1.0"
spdx = "0.10.0"
csaf = {version = "0.4.0", default-features = false }
guac-rs = { git = "https://github.com/dejanb/guac-rs.git" }

# monitoring
prometheus = { version = "0.13.3", optional = true }

[features]
default = ["sigstore", "monitor", "showcase"]
sigstore = ["dep:sigstore"]
monitor = ["prometheus"]
debug = []
# add some features to show features of seedwing
showcase = []

[dev-dependencies]
criterion = "0.4"
tokio = { version = "1.24", features = ["rt"] }
actix-rt = "2.7.0"
env_logger = { version = "0.10.0", default-features = false }

[[bench]]
name = "engine"
harness = false
