[package]
name = "seedwing-policy-frontend"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Seedwing Policy Frontend"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
gloo-console = "0.2.3"
gloo-net = { version = "0.2.6", features = ["json"] }
gloo-utils = "0.1.6"
itertools = "0.10"
js-sys = "0.3.61"
log = "0.4"
monaco = { version = "0.3", features = ["yew-components"] }
patternfly-yew = { version = "0.4.0-alpha.2", features = ["icons-fab"] }
ropey = "1"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2.0"
yew-nested-router = "0.2.0"
yew-websocket = "0.2.0"

serde = "1"
serde_json = "1"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.4.5"

asciidoctor-web = { version = "0.1", features = ["yew"] }
monaco-editor-textmate-web = { git = "https://github.com/ctron/monaco-editor-textmate-web", features = ["yew"] }
seedwing-policy-engine = { path = "../engine", default-features = false, features = [] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "56299f5da42551677415a34a2bb2f49ef142b444" }
monaco = { git = "https://github.com/siku2/rust-monaco", rev = "794a4cc7819f9ed7eb06559e24f75a41e23cf22a" }
#patternfly-yew = { path = "../../patternfly-yew" }
#yew-nested-router = { path = "../../yew-nested-router" }
