[package]
name = "seedwing-policy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
ariadne = "0.1.5"
walkdir = "2.3.2"
serde = { version = "1.0.152", features = [ "rc", "derive"] }
serde_json = "1.0.89"
async-mutex = "1.4.0"
log = "0.4.17"

# functions
sigstore = "0.6.0"
x509-parser = "0.14.0"
base64 = "0.20.0"

[dev-dependencies]
actix-rt = "2.7.0"