[package]
name = "seedwing-policy-engine"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/seedwing-policy"

description = "A functional type system for implementing policy inspection, audit and enforcement"
categories = ["development-tools", "parser-implementations"]
keywords = ["policy"]
readme = "../README.md"

[dependencies]
chumsky = "0.8.0"
ariadne = "0.1.5"
walkdir = "2.3.2"
serde = { version = "1.0.152", features = [ "rc", "derive"] }
serde_json = { version = "1.0.89", features = [ "float_roundtrip", "arbitrary_precision"] }
log = "0.4.17"
futures-util = "0.3.25"
thiserror = "1"
indexmap = { version = "1.9.2", features = ["serde"] }

# functions
sigstore = { version = "0.6.0", optional = true }
x509-parser = "0.14.0"
base64 = "0.21.0"
regex = "1.7.1"
cidr = "0.2.1"

[features]
default = ["sigstore"]
sigstore = ["dep:sigstore"]

[dev-dependencies]
criterion = "0.4"
tokio = { version = "1.24", features = ["rt"] }
actix-rt = "2.7.0"

[[bench]]
name = "engine"
harness = false
