[package]
name = "seedwing-policy-frontend"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Seedwing Policy Frontend"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
log = "0.4"
gloo-console = "0.2.3"
monaco = { git="https://github.com/siku2/rust-monaco", features = ["yew-components"] }
patternfly-yew = "0.4.0-alpha.1"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-nested-router = "0.1.1"
yew-hooks = "0.2.0"
gloo-net = { version = "0.2.6", features = ["json"] }
js-sys = "0.3.61"
ropey = "1"

serde = "1"
serde_json = "1"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.4.5"

seedwing-policy-frontend-asciidoctor = { path = "seedwing-policy-frontend-asciidoctor" }
seedwing-policy-engine = { path = "../seedwing-policy-engine", default-features = false, features = [] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[workspace]
members = [
    "seedwing-policy-frontend-asciidoctor"
]

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "ebc79d53484a2d1e77cc966bbf4f43d70d4af552" }
yew-nested-router = { path = "../../yew-nested-router" }