[package]
name = "seedwing-policy-frontend"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Seedwing Policy Frontend"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
gloo-console = "0.2.3"
gloo-net = { version = "0.2.6", features = ["json"] }
gloo-utils = "0.1.6"
js-sys = "0.3.61"
log = "0.4"
monaco = { git = "https://github.com/siku2/rust-monaco", features = ["yew-components"] }
patternfly-yew = { version = "0.4.0-alpha.1", features = ["icons-fab"] }
ropey = "1"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2.0"
yew-nested-router = "0.1.1"

serde = "1"
serde_json = "1"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.4.5"

seedwing-policy-frontend-asciidoctor = { path = "seedwing-policy-frontend-asciidoctor" }
seedwing-policy-engine = { path = "../seedwing-policy-engine", default-features = false, features = [] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[workspace]
members = [
    "seedwing-policy-frontend-asciidoctor"
]

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "14036e5ed29e50cad5a04925b5eb50d137928305" }
#patternfly-yew = { path = "../../patternfly-yew" }
yew-nested-router = { path = "../../yew-nested-router" }