[package]
name = "seedwing-policy-server"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seedwing-policy-engine = { path = "../seedwing-policy-engine" }
actix-web = "4"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.25"
serde_json = "1.0.89"
clap = "4.0.29"
handlebars = "4.3.6"
serde = { version = "1.0.152" }
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"
