[package]
name = "seedwing-policy-server"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/seedwing-policy"

description = "A server to evaluate and explore seedwing policies"
categories = ["development-tools", "parser-implementations"]
keywords = ["policy"]

[dependencies]
seedwing-policy-engine = { path = "../seedwing-policy-engine" }
actix-web = "4"
mime = "0.3"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.25"
serde_json = "1.0.89"
clap = "4.0.29"
handlebars = "4.3.6"
serde = { version = "1.0.152" }
actix-web-static-files = "4.0"
static-files = "0.2.1"
tokio = "*"

[build-dependencies]
static-files = "0.2.1"

[features]
debug = ["seedwing-policy-engine/debug"]
