[package]
name = "seedwing-policy-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seedwing-policy-engine = { path = "../seedwing-policy-engine", default-features = false }
serde_json = "1"
wasi = "0.11"
tokio = { version = "1.21", default-features = false, features = ["rt"] }
anyhow = "1"
