[package]
name = "seedwing-policy-server"
version = "0.1.0-alpha.23"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/seedwing-policy"

description = "A server to evaluate and explore seedwing policies"
categories = ["development-tools", "parser-implementations"]
keywords = ["policy"]

[dependencies]
seedwing-policy-engine = { path = "../engine", features = ["sigstore", "prometheus"] }
prometheus = "0.13.3"
actix-web = "4"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.25"
serde_json = "1.0.89"
serde_yaml = "0.9"
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.152" }
actix-web-static-files = { version = "4.0", optional = true }
static-files = { version = "0.2.1", optional = true }
tokio = "*"
actix-rt = "*"
actix = "*"
actix-ws = "*"
chrono = "0.4.23"
mime = "0.3.16"
thiserror = "1"

seedwing-policy-server-embedded-frontend = { path = "embedded-frontend", optional = true }

[build-dependencies]
static-files = "0.2.1"

[features]
debug = ["seedwing-policy-engine/debug"]
frontend = [
    "seedwing-policy-server-embedded-frontend",
    "actix-web-static-files",
    "static-files"
]
