[package]
name = "seedwing-policy-frontend-asciidoctor"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Seedwing Policy Frontend Asciidoctor"
license = "Apache-2.0"

[dependencies]
yew = "0.20"
wasm-bindgen = "0.2"
serde_json = "1"
serde-wasm-bindgen = "0.4.5"