[package]
name = "static-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "a15cb9dbee4f619b286fc22879a94f7197d55b18", default-features = true, features = ['macros'] }
serde_json = "1.0.89"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug-assertions = false

[workspace]
