[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmtime = "10.0.1"
wasi-common = "10.0.1"
wasmtime-wasi = { version = "10.0.1", features = ["preview1-on-preview2", "tokio", "sync"]}
tokio = { version = "1", features = ["full"] }
wat = "1.0.66"
clap = { version = "4.3.11", features = ["derive"]}

[[bin]]
name = "wasm-runtime"
path = "src/main.rs"

[workspace]
