[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmtime = { version = "10.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "10.0.0", features = ["preview1-on-preview2", "tokio", "sync"]}
wasi-common = "10.0.0"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.89", features = ["float_roundtrip", "arbitrary_precision", "preserve_order"] }

[workspace]
